[gd_scene load_steps=9 format=3 uid="uid://m57wcrow0drw"]

[ext_resource type="Texture2D" uid="uid://blhvbbk4pvhsc" path="res://fondo_menu.png" id="1_f3lg5"]
[ext_resource type="Script" path="res://scripts/ui/main_menu_panel_controller.gd" id="1_mn5kh"]
[ext_resource type="Texture2D" uid="uid://cvllnf385ta4s" path="res://ui_buttons.png" id="2_ddj84"]
[ext_resource type="FontFile" uid="uid://chtt3c2mdlw2e" path="res://CloisterBlack.ttf" id="3_0gi7u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kqoan"]
atlas = ExtResource("2_ddj84")
region = Rect2(885, 126, 1011, 1262)

[sub_resource type="LabelSettings" id="LabelSettings_shxd6"]
font = ExtResource("3_0gi7u")
font_size = 100
font_color = Color(0.941176, 0.92549, 0.698039, 1)
outline_color = Color(0.303233, 0.303233, 0.303233, 1)
shadow_size = 7
shadow_color = Color(0.270222, 0.270222, 0.270222, 1)
shadow_offset = Vector2(2, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_mve77"]
atlas = ExtResource("2_ddj84")
region = Rect2(100, 154, 307, 147)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv1rx"]
atlas = ExtResource("2_ddj84")
region = Rect2(100, 354, 307, 147)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -68.0
offset_top = -152.0
offset_right = 1242.0
offset_bottom = 885.0
texture = ExtResource("1_f3lg5")

[node name="MainMenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.291667
anchor_top = 0.151235
anchor_right = 0.700521
anchor_bottom = 0.839506
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mn5kh")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="MainMenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.000396729
offset_top = -90.6001
offset_right = 519.0
offset_bottom = 704.6
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_kqoan")

[node name="ButtonVerticalContainer" type="VBoxContainer" parent="MainMenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.5
offset_top = -235.0
offset_right = 281.5
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="Label" parent="MainMenuPanel/ButtonVerticalContainer"]
layout_mode = 2
text = "Toro Rush"
label_settings = SubResource("LabelSettings_shxd6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGameButton" type="Button" parent="MainMenuPanel/ButtonVerticalContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = SubResource("AtlasTexture_mve77")
flat = true
icon_alignment = 1

[node name="QuitGameButton" type="Button" parent="MainMenuPanel/ButtonVerticalContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = SubResource("AtlasTexture_mv1rx")
flat = true
icon_alignment = 1

[connection signal="button_down" from="MainMenuPanel/ButtonVerticalContainer/StartGameButton" to="MainMenuPanel" method="_on_start_game_button_button_down"]
[connection signal="button_down" from="MainMenuPanel/ButtonVerticalContainer/QuitGameButton" to="MainMenuPanel" method="_on_quit_game_button_button_down"]
